--- a/style.css
+++ b/style.css
@@ -3,3 +3,52 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header{
+  text-align: center;
+}
+
+/* section#featured-property{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+} */
+
+/* .pic{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+} */
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+
+figcaption{
+  font-size: smaller;
+  text-align: center;
+}
+
+#featured-property > p{
+  text-align: center;
+  width: 800px;
+  margin: auto
+}
+
+#details >div{
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
